@@ -517,8 +517,8 @@ INDEX		|2		|itemid,function,parameter
 TABLE|graphs|graphid|ZBX_SYNC,ZBX_DATA
 FIELD		|graphid	|t_id		|	|NOT NULL	|0
 FIELD		|name		|t_varchar(128)	|''	|NOT NULL	|ZBX_SYNC
-FIELD		|width		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|height		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|width		|t_integer	|'900'	|NOT NULL	|ZBX_SYNC
+FIELD		|height		|t_integer	|'200'	|NOT NULL	|ZBX_SYNC
 FIELD		|yaxismin	|t_double	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|yaxismax	|t_double	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|templateid	|t_id		|	|NULL		|ZBX_SYNC		|1|graphs	|graphid
@@ -1232,4 +1232,4 @@ UNIQUE		|1			|applicationid,templateid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2010091	|2010091
+ROW		|2010093	|2010093
